    necessary.
  * Added a read method for reading from a process -- using its assigned
    output port.
  * Added a write method for writing to a process -- using its assigned
    input port.
  * il_traceback will display the first string in the error without escapes,
    and all subsequent values using show.
  * Added support for arithmetic comparisons with 1 or more arguments.

- 2/08/2006, Clarification of Show and Write
  * Updated fakevm and mosc with hacks for Scheme environments to work around
    the differences in write, and the lack of display.
  * the suspend and pause primitives now properly clear their call frames off
    the return stack.
  * the read-desr primitive now properly clears its call frame off the return 
    stack if it blocks to monitor.
  * NO_MORE_ARGS no longer crashes the virtual machine when the user supplies
    too many arguments to a primitive.
  * mqo_list_ref now signals an error when index is greater than length.
  * mqo_show_string now wraps the supplied string in quotes.
  * Modified the process type to maintain fields for current-input-port and
    current-output-port.
  * Added the set-process-input! primitive to assign an input value to a 
    process.  This is used to specify input-ports on a per-process basis.
  * Added the set-process-output! primitive to assign an output value to a 
    process.  This is used to specify output-ports on a per-process basis.
  * Added the process-input primitive to retrieve the input value of a
    process.
  * Added the process-output primitive to retrieve the output value of a
    process.
  * Altered the spawn primitive to initialize a new process's input and output
    to that of its parent.
  * Added the *console-output-port* global, which is an output-port that writes
    to the console descriptor.
  * Added the *console-input-port* global, which is an input-port that reads 
    from the console descriptor.
  * Added the current-input-port procedure to lib/core, which returns the